# containers-itmo-aith26

./: README.md
lab1/nginx/: BAD_PRACTICES_TEMPLATE.md  BEST_PRACTICES_TEMPLATE.md  CHANGES.md  Dockerfile  Dockerfile.bad  Dockerfile.good  README.md  nginx.conf
lab2/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
lab2/services/gateway/: .dockerignore  Dockerfile  pyproject.toml
lab2/services/gateway/app/: config.py  db.py  llm_client.py  main.py
lab2/services/gateway/app/routers/: __init__.py  health.py  messages.py  users.py
lab2/services/init-db/: Dockerfile  alembic.ini  pyproject.toml
lab2/services/init-db/alembic/: env.py  script.py.mako
lab2/services/init-db/alembic/versions/: 20241207_01_create_base_tables.py
lab2/services/llm/: Dockerfile  pyproject.toml
lab2/services/llm/app/: config.py  engine.py  main.py
lab2/services/tg-bot/: Dockerfile  pyproject.toml
lab2/services/tg-bot/bot/: __init__.py  config.py  gateway_client.py  handlers.py  main.py
lab2/shared/: __init__.py  models.py  schemas.py
lab3/: README.md
lab3/manifests/nextcloud/: nextcloud-configmap.yaml  nextcloud-deployment.yaml  nextcloud-secret.yaml  nextcloud-service.yaml
lab3/manifests/postgres/: postgres-deployment.yaml  postgres-secret.yaml
lab4/: README.md
lab4/manifests/: 00-namespace.yaml  01-configmaps.yaml  02-secrets.yaml  10-postgres.yaml  20-llm.yaml  30-gateway.yaml  40-tg-bot.yaml
