[project]
name = "lab2-gateway"
version = "0.1.0"
description = "API-шлюз между Telegram ботом и LLM"
requires-python = ">=3.11"
authors = [ { name = "ITMO Containers" } ]
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "uvicorn>=0.30.1,<0.31",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29.0,<0.30",
    "pydantic-settings>=2.2.1,<2.3",
    "httpx>=0.27.0,<0.28",
]

[tool.uv]
managed = true
