[project]
name = "lab2-tg-bot"
version = "0.1.0"
description = "Telegram бот для рекомендаций транспортных средств"
requires-python = ">=3.11"
authors = [ { name = "ITMO Containers" } ]
dependencies = [
    "aiogram>=3.5.0,<3.6",
    "httpx>=0.27.0,<0.28",
    "pydantic-settings>=2.2.1,<2.3",
]

[tool.uv]
managed = true
